--- a/style.css
+++ b/style.css
@@ -2,15 +2,21 @@
 td{
     width: 100px;
     height: 100px;
+
+}
+
+.white{
+    background: #e5e2e2;
     outline: 1px solid;
     text-align: center;
     vertical-align: middle;
 }
 
-.white{
-    background: #e5e2e2;
-}
-
 .black{
     background: #6f6d6b;
+    outline: 1px solid;
+    text-align: center;
+    vertical-align: middle;
 }
+
+/*https://snipp.ru/html-css/chess-field*/
